# pyodide-express-server

./: .env.example  .env.production  .eslintrc.json  .flake8  .gitignore  .prettierrc  AWS_DEPLOYMENT_GUIDE.md  CODE_QUALITY_AUDIT.md  CONTRIBUTING.md  Dockerfile  EMERGENCY_SECURITY_FIXES.md  LICENSE  MATPLOTLIB_TEST_CONVERSION_SUMMARY.md  MEMORY_LEAK_FIX_SUMMARY.md  MODERNIZED_TESTS_COMPLETE.md  PERFORMANCE_TEST_CONVERSION_SUMMARY.md  PERFORMANCE_TRACKING.md  PROCESS_POOL_CONFIG.md  PRODUCTION_SECURITY_RESEARCH.md  README.md  SECURITY_FINAL_REPORT.md  TESTING.md  TEST_CONVERSION_SUMMARY.md  TODO.md  VS_CODE_PYTEST_GUIDE.md  add-default-packages.js  check_filesystem.py  check_mount.py  crash-analyzer.js  debug_execute_raw.py  debug_filesystem.ps1  debug_upload.py  deploy-production.ps1  deploy-production.sh  docker-compose.dev.yml  docker-compose.yml  ecosystem.config.js  ecosystem.config.json  eslint.config.js  fix_api_calls.py  (+44 more)
.VSCodeCounter/2025-09-16_21-30-29/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
aws/: ecs-task-definition.json  main.tf
docs/: FILESYSTEM_MOUNTING_GUIDE.md  QUICK_REFERENCE_FILESYSTEM.md  README.md  architecture.md  curl-commands.md
examples/: README.md  basic-client.js  data-science-client.js  execute-raw-client.js  file-upload-client.js
performance_tracking/: concurrency_limits_history.json  concurrent_test_history.json  data_processing_limits_history.json  matrix_operations_limits_history.json  memory_allocation_limits_history.json  monitor_report_20250916_000520.json  monitor_report_20250916_000606.json  performance_summary.csv  prime_calculation_limits_history.json  recursive_algorithms_limits_history.json  string_processing_limits_history.json  termination_behavior_history.json  timeout_limit_discovery_history.json
plots/: README.md
public/: index.html
pyodide_data/plots/: cross_platform_test.txt
src/: app.js  server.js  swagger-config.js
src/config/: constants.js  index.js
src/controllers/: executeController.js  healthController.js  uploadController.js
src/middleware/: validation.js
src/routes/: crashReports.js  dashboard.js  execute.js  executeRaw.js  files.js  health.js  pyodide-internal.js  safePath.js  stats.js  upload.js
src/services/: layout.js  pyodide-executor.js  (+4 more)
tests/: MATPLOTLIB_FILESYSTEM_TEST_UPDATE_SUMMARY.md  PERFORMANCE_TEST_REFACTORING_SUMMARY.md  PYTEST_CONVERSION_SUMMARY.md  TEST_EXTRACT_PLOTS_CONVERSION_SUMMARY.md  code_quality_test_migration_summary.md  conftest.py  execute_raw_migration_summary.md  integration_migration_summary.md  test_api.py  test_api_modernized.py  test_api_original_backup.py  test_api_partial_backup.py  test_basic_errors.py  test_code_quality_compliance.py  test_code_quality_compliance.py.ORIGINAL  test_config.py  test_container_filesystem.py  test_container_filesystem.py.ORIGINAL  test_container_filesystem_pytest.py  test_conversion_summary.md  test_crash_reporting_system.py  test_csp_compliance.py  test_debug_filesystem_plots.py  test_direct_filesystem_mount.py  test_dynamic_modules_and_execution_robustness.py  test_dynamic_modules_and_execution_robustness_pytest.py  test_dynamic_modules_and_execution_robustness_pytest_fixed.py  test_error_handling.py  test_error_handling_pytest.py  test_extract_plots_api.py  test_extract_plots_api.py.ORIGINAL_BACKUP  test_extract_plots_api.py.unittest.backup  test_extract_virtual_file_implementation.py  test_file_management_enhancements.py  test_file_management_enhancements_original_backup.py  test_file_upload_enhancements.py  test_filesystem_mount.py  test_filesystem_persistence.py  test_function_return_patterns.py  test_function_return_patterns.py.backup  (+49 more)
(+17 files in other folders)
